--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">SS List</string>
     <string name="action_change_store">Change Store</string>
     <string name="action_add_category">Add Category</string>
-    <string name="action_edit_cat">Edit Category</string>
+    <string name="action_edit_cat">Manage Categories</string>
     <string name="action_add_store">Add Store</string>
     <string name="action_edit_store">Edit Store</string>
 
